# simple-chat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.hooks/: pre-commit
assets/: example-server-clients.webm
chat-contract/: Cargo.toml  build.rs
chat-contract/src/: builders.rs  lib.rs
client/: Cargo.toml
client-cli/: Cargo.toml
client-cli/src/: main.rs
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  protobuf_stream.rs
proto/: chat.proto
scripts/: install-hooks.sh
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: main.rs
server/src/: main.rs  messages.rs
server/src/actors/: chat_actor.rs  mod.rs
server/src/transport/: mod.rs  quic.rs
server/tests/: server_test.rs
