[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Ron Zigelman <roniz.net@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
chat-contract = { version = "0.1.0", path = "../chat-contract" }
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
protobuf-stream = { git = "https://github.com/r-zig/protobuf-stream.git", version = "0.1.3" }
quinn = "0.11.8"
quinn-proto = "0.11.11"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pki-types = "1.7"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "time" ,"signal", "io-std"] }
tracing = "0.1.41"
