[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
prost = "0.12"
quinn = "0.11.7"
tokio = { version = "1.44.2", features = ["io-util", "macros", "rt", "test-util"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
