[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
authors = ["Ron Zigelman <roniz.net@gmail.com>"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.13.5"
chat-contract = { version = "0.1.0", path = "../chat-contract" }
quinn = "0.11.7"
protobuf-stream = { git = "https://github.com/r-zig/protobuf-stream.git", version = "0.1.3" }
async-trait = "0.1.88"
prost = "0.12"
tokio = "1.44.2"
tracing = "0.1.41"
futures = "0.3.31"
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.5"
rustls-pki-types = "1.7"
quinn-proto = "0.11.11"
directories-next = "2.0.0"
rcgen = "=0.13.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
